Consistent naming of the bookmark isPrimary field to fix the not showing 'primary' status
#268

--- a/waltz-ng/style/_waltz.scss
+++ b/waltz-ng/style/_waltz.scss
@@ -12,6 +12,7 @@
 @import "waltz-visibility";
 @import "breadcrumbs";
 @import "grid";
+@import "bootstrap-styles";
 
 @import "../client/auth-sources/auth-sources";
 @import "../client/common/directives/bucket-chart";
@@ -239,31 +240,4 @@ a.subtle-link:hover {
 .waltz-btn-transparent {
     @extend .btn-default;
     background-color: transparent;
-}
-
-
-//
-// Dropdowns
-// --------------------------------------------------
-.dropdown-menu > li div a {
-    display: block;
-    padding: 3px 20px;
-    clear: both;
-    font-weight: normal;
-    line-height: 1.42857;
-    color: #333333;
-    white-space: nowrap;
-    text-decoration: none;
-}
-//
-.dropdown-menu > li div:hover,
-.dropdown-menu > li div:focus {
-    @include gradient-vertical($start-color: $dropdown-link-hover-bg, $end-color: darken($dropdown-link-hover-bg, 5%));
-    background-color: darken($dropdown-link-hover-bg, 5%);
-}
-.dropdown-menu > .active div,
-.dropdown-menu > .active div:hover,
-.dropdown-menu > .active div:focus {
-    @include gradient-vertical($start-color: $dropdown-link-active-bg, $end-color: darken($dropdown-link-active-bg, 5%));
-    background-color: darken($dropdown-link-active-bg, 5%);
 }
